Refactor banner styles and enhance animations
Refactor styles and improve animation effects in the banner section. Update JavaScript for canvas resizing and dot animations.

--- a/index.html
+++ b/index.html
@@ -6,106 +6,136 @@
     <title>Document</title>
     <style>
         body{
-    color: #eee;
-    font-family:    ;
-    margin: 0;
-    background-image:
-    repeating-linear-gradient(
-        to right, #2d2a44 0 1px, transparent 2px 200px
-    ),
-    repeating-linear-gradient(
-        to bottom, #2d2a44 0 1px, transparent 2px 200px
-    ),
-    radial-gradient(
-        at 50% 50%, #2d2a44, #1d1b34
-    );
-}
-::-webkit-scrollbar{
-    width: 0;
-}
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-}
-header img{
-    width: 30px;
-}
-header{
-    width: min(1200px, 90vw);
-    margin: auto;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-header nav ul{
-    display: flex;
-    gap: 30px;
-}
-main{
-}
-main .banner{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    text-align: center;
-    margin-top: -70px;
-}
-h1, h2, h3, h4, h5, h6{
-    font-weight: 500;
-}
-.banner button{
-    all: unset;
-    border: 1px solid #afaeae55;
-    padding: 10px 20px;
-    border-radius: 20px;
-    background-image: linear-gradient(
-        to bottom, #eee1, transparent, #eee1
-    );
-    cursor: pointer;
-    transition: 0.5s;
-}
-.banner button:hover{
-    background-color: #c691e6;
-    color: #040018;
-    box-shadow: 0 0 50px #c691e6;
-   
-}
-h1{
-    --to: left;
-    font-size: 4em;
-    font-weight: bold;
-    background-image: linear-gradient(
-        to var(--to), #89a5df, #e46e7f, #e8e191
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-transform: uppercase;
-    line-height: 1em;
-
-
-}
-h1.right{
-    --to: right;
-}
-
-
-.banner{
-    position: relative;
-}
-.banner #dotsCanvas{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-}
+            color: #eee;
+            font-family: ;
+            margin: 0;
+            background-image:
+                repeating-linear-gradient(
+                    to right, #2d2a44 0 1px, transparent 2px 200px
+                ),
+                repeating-linear-gradient(
+                    to bottom, #2d2a44 0 1px, transparent 2px 200px
+                ),
+                radial-gradient(
+                    at 50% 50%, #2d2a44, #1d1b34
+                );
+        }
+        ::-webkit-scrollbar{
+            width: 0;
+        }
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            list-style: none;
+        }
+        header img{
+            width: 30px;
+        }
+        header{
+            width: min(1200px, 90vw);
+            margin: auto;
+            height: 70px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        header nav ul{
+            display: flex;
+            gap: 30px;
+        }
+        main{}
+        main .banner{
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            text-align: center;
+            margin-top: -70px;
+        }
+        h1, h2, h3, h4, h5, h6{
+            font-weight: 500;
+        }
+        .banner button{
+            all: unset;
+            border: 1px solid #afaeae55;
+            padding: 10px 20px;
+            border-radius: 20px;
+            background-image: linear-gradient(
+                to bottom, #eee1, transparent, #eee1
+            );
+            cursor: pointer;
+            transition: 0.5s;
+        }
+        .banner button:hover{
+            background-color: #c691e6;
+            color: #040018;
+            box-shadow: 0 0 50px #c691e6;
+        }
+        h1{
+            --to: left;
+            font-size: 4em;
+            font-weight: bold;
+            background-image: linear-gradient(
+                to var(--to), #89a5df, #e46e7f, #e8e191
+            );
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-transform: uppercase;
+            line-height: 1em;
+            display: inline-block;
+            animation: shakeWave 2s infinite;
+        }
+        h1.right{
+            --to: right;
+            animation-delay: 1s;
+        }
+        @keyframes shakeWave {
+            0%   { transform: translateY(0) rotate(-0.5deg) scale(1);}
+            5%   { transform: translateY(-2px) rotate(1deg) scale(1.01);}
+            10%  { transform: translateY(4px) rotate(-1deg) scale(1.01);}
+            15%  { transform: translateY(-6px) rotate(0.5deg) scale(1);}
+            20%  { transform: translateY(4px) rotate(-0.5deg) scale(1.01);}
+            25%  { transform: translateY(0) rotate(0deg) scale(1);}
+            30%  { transform: translateY(-2px) rotate(1deg) scale(1.01);}
+            35%  { transform: translateY(2px) rotate(-1deg) scale(1.01);}
+            40%  { transform: translateY(-4px) rotate(0.5deg) scale(1);}
+            45%  { transform: translateY(2px) rotate(-0.5deg) scale(1.01);}
+            50%  { transform: translateY(0) rotate(0deg) scale(1);}
+            100% { transform: translateY(0) rotate(-0.5deg) scale(1);}
+        }
+        /* Ocean wave effect for sentences */
+        h4 {
+            font-size: 2em;
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+        }
+        .wave-effect{
+            display: inline-block;
+            animation: waveAnim 2s infinite linear;
+        }
+        @keyframes waveAnim {
+            0%   { transform: translateY(0px);}
+            33%  { transform: translateY(-8px);}
+            66%  { transform: translateY(8px);}
+            100% { transform: translateY(0);}
+        }
+        /* Dot canvas to cover banner */
+        .banner{
+            position: relative;
+        }
+        .banner #dotsCanvas{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+            z-index: 0;
+        }
     </style>
 </head>
 <body>
@@ -124,92 +154,119 @@ h1.right{
     </header>
     <main>
         <div class="banner">
-            <h5>ok</h5>
+            <h5>@ok</h5>
             <div>
                 <h1 class="left">Welcome to My Coding</h1>
                 <h1 class="right">Violet</h1>
             </div>
             <h4>
-                Subscribe to the channel to continuously
-                <br>update interesting videos
+                <!-- Ocean wave effect: split sentence into spans -->
+                <span class="wave-effect">Subscribe</span> 
+                <span class="wave-effect" style="animation-delay:0.2s">to</span>
+                <span class="wave-effect" style="animation-delay:0.4s">the</span>
+                <span class="wave-effect" style="animation-delay:0.6s">channel</span>
+                <span class="wave-effect" style="animation-delay:0.8s">to</span>
+                <span class="wave-effect" style="animation-delay:1s">continuously<br></span>
+                <span class="wave-effect" style="animation-delay:1.2s">update</span>
+                <span class="wave-effect" style="animation-delay:1.4s">interesting</span>
+                <span class="wave-effect" style="animation-delay:1.6s">videos</span>
             </h4>
             <button>Subscribe Now &#8599</button>
-
-
             <canvas id="dotsCanvas"></canvas>
         </div>
     </main>    
-
-
-
-
     <script>
         let banner = document.querySelector('.banner');
-let canvas = document.getElementById('dotsCanvas');
-canvas.width = canvas.offsetWidth;
-canvas.height = canvas.offsetHeight;
-const ctx = canvas.getContext('2d');
-let dots = [];
-const arrayColors = ['#eee', '#545454', '#596d91', '#bb5a68', '#696541'];
-for (let index = 0; index < 100; index++) {
-    dots.push({
-        x:  Math.floor(Math.random() * canvas.width),
-        y:  Math.floor(Math.random() * canvas.height),
-        size: Math.random() * 3 + 5,
-        color: arrayColors[Math.floor(Math.random()* 5)]
-    });
-}
-const drawDots = () => {
-    dots.forEach(dot => {
-        ctx.fillStyle = dot.color;
-        ctx.beginPath();
-        ctx.arc(dot.x, dot.y, dot.size, 0, Math.PI*2);
-        ctx.fill();
-    })
-}
-drawDots();
-banner.addEventListener('mousemove', (event) => {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    drawDots();
-    let mouse = {
-        x:  event.pageX - banner.getBoundingClientRect().left,
-        y:  event.pageY - banner.getBoundingClientRect().top
-    }
-    dots.forEach(dot => {
-        let distance = Math.sqrt((mouse.x - dot.x) ** 2 + (mouse.y - dot.y) ** 2);
-        if(distance < 300){
-            ctx.strokeStyle = dot.color;
-            ctx.lineWidth = 1;
-            ctx.beginPath();
-            ctx.moveTo(dot.x, dot.y);
-            ctx.lineTo(mouse.x, mouse.y);
-            ctx.stroke();
+        let canvas = document.getElementById('dotsCanvas');
+        function resizeCanvas() {
+            canvas.width = banner.offsetWidth;
+            canvas.height = banner.offsetHeight;
         }
-    })
-})
-banner.addEventListener('mouseout', () => {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    drawDots();
-})
-window.addEventListener('resize', () => {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    canvas.width = banner.offsetWidth;
-    canvas.height = banner.offsetHeight;
-
-
-    dots = [];
-    for (let index = 0; index < 50; index++) {
-        dots.push({
-            x:  Math.floor(Math.random() * canvas.width),
-            y:  Math.floor(Math.random() * canvas.height),
-            size: Math.random() * 3 + 5,
-            color: arrayColors[Math.floor(Math.random()* 5)]
+        resizeCanvas();
+        const ctx = canvas.getContext('2d');
+        let dots = [];
+        const arrayColors = ['#eee', '#545454', '#596d91', '#bb5a68', '#696541'];
+        // dot wave plus brightness & movement
+        function createDots(count) {
+            dots = [];
+            for (let index = 0; index < count; index++) {
+                dots.push({
+                    x:  Math.random()*canvas.width,
+                    y:  Math.random()*canvas.height,
+                    size: Math.random()*3 + 5,
+                    baseSize: Math.random()*3 + 5,
+                    color: arrayColors[Math.floor(Math.random()*arrayColors.length)],
+                    shine: Math.random(),
+                    phase: Math.random()*Math.PI*2,
+                    speed: Math.random()*0.7 + 0.25,
+                    offset: Math.random()*25 + 15,
+                });
+            }
+        }
+        let dotCount = 100;
+        createDots(dotCount);
+        function drawDots(t) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            dots.forEach(dot => {
+                // Make dots shine and move in sine wave
+                let brightness = (Math.sin(t/500 + dot.phase)*0.5 + 0.5)*0.5 + 0.5;
+                let shimmerColor = dot.color;
+                // Glow - for "shining"
+                ctx.save();
+                ctx.shadowColor = "#f9eaff";
+                ctx.shadowBlur = 8 + 12*brightness;
+                // Move like an ocean wave vertically
+                let waveY = dot.y + Math.sin(t/350 * dot.speed + dot.phase)*dot.offset;
+                let waveX = dot.x + Math.cos(t/350 * dot.speed + dot.phase)*dot.offset*0.5;
+                ctx.beginPath();
+                ctx.arc(waveX, waveY, dot.baseSize + 2*brightness, 0, Math.PI*2);
+                ctx.fillStyle = shimmerColor;
+                ctx.globalAlpha = 0.6 + 0.4*brightness;
+                ctx.fill();
+                ctx.restore();
+            });
+        }
+        // Ocean line connection effect
+        function drawLinks(mouse) {
+            dots.forEach(dot => {
+                let waveY = dot.y + Math.sin(Date.now()/350 * dot.speed + dot.phase)*dot.offset;
+                let waveX = dot.x + Math.cos(Date.now()/350 * dot.speed + dot.phase)*dot.offset*0.5;
+                let distance = Math.sqrt((mouse.x - waveX) ** 2 + (mouse.y - waveY) ** 2);
+                if(distance < 160){
+                    ctx.save();
+                    ctx.globalAlpha=0.5;
+                    ctx.strokeStyle=dot.color;
+                    ctx.lineWidth=1;
+                    ctx.beginPath();
+                    ctx.moveTo(waveX, waveY);
+                    ctx.lineTo(mouse.x, mouse.y);
+                    ctx.stroke();
+                    ctx.restore();
+                }
+            });
+        }
+        let lastMouse = null;
+        function animate() {
+            let t = Date.now();
+            drawDots(t);
+            if(lastMouse) drawLinks(lastMouse);
+            requestAnimationFrame(animate);
+        }
+        animate();
+        banner.addEventListener('mousemove', (event) => {
+            let rect = banner.getBoundingClientRect();
+            lastMouse = {
+                x: event.clientX-rect.left,
+                y: event.clientY-rect.top
+            };
         });
-    }
-    drawDots();
-})
+        banner.addEventListener('mouseout', () => {
+            lastMouse=null;
+        });
+        window.addEventListener('resize', () => {
+            resizeCanvas();
+            createDots(dotCount);
+        });
     </script>
 </body>
 </html>
-
-
